fix bottom margin entry hidden behind nav

--- a/client/src/sass/components/_homepage.scss
+++ b/client/src/sass/components/_homepage.scss
@@ -75,7 +75,7 @@
 
   &-list {
     width: 80%;
-    margin: 2rem auto;
+    margin: 4rem auto;
     display: flex;
     flex-flow: column;
     align-items: center;
